Plugin: ExtraMenuFromWebservice: Fix z-index - refs BT#20442

--- a/plugin/extramenufromwebservice/resources/css/extramenufromwebservice.css
+++ b/plugin/extramenufromwebservice/resources/css/extramenufromwebservice.css
@@ -97,3 +97,6 @@
   top: 0;
   transform: rotate(90deg);
 }
+#date_all_text {
+  z-index: 0; !important;
+}
